Small fix to positioning of elements on mobile devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -141,8 +141,8 @@ color: #F39237;
 
 .page-heading {
     position: relative;
-    top: 5rem;
-    margin-bottom: 6rem;
+    top: 6rem;
+    margin-bottom: 4rem;
 }
 
 section.map-section {
@@ -206,7 +206,7 @@ div#information-box {
 }
 
 #address-form {
-    margin:0;
+    margin: 0rem 0rem 2rem 0rem;
 }
 
 .location-name {
